--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1404,6 +1404,28 @@ body {
     width: 100% !important;
   }
 }
+.cid-rKLVcMXZE7 {
+  background: #0f7699;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #cc2952, #0f7699);
+}
+.cid-rKLVcMXZE7 .image-block {
+  margin: auto;
+}
+.cid-rKLVcMXZE7 figcaption {
+  position: relative;
+}
+.cid-rKLVcMXZE7 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rKLVcMXZE7 .image-block {
+    width: 100% !important;
+  }
+}
 .cid-rKLJpMFQs5 {
   background: #149dcc;
   padding-top: 60px;
