--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1426,11 +1426,19 @@ body {
     width: 100% !important;
   }
 }
+.cid-rKM0yGAOcv {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #7f1933;
+}
+.cid-rKM0yGAOcv P {
+  color: #767676;
+}
 .cid-rKLJpMFQs5 {
   background: #149dcc;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: linear-gradient(0deg, #149dcc, #ffffff);
+  background: linear-gradient(0deg, #149dcc, #7f1933);
 }
 .cid-rKLJpMFQs5 .video-block {
   margin: auto;
